caffeine_lang/test/caffeine_lang/corpus/frontend/parser/errors/missing_blueprint_name.caffeine
Blueprints
  * success_rate(x):
    Requiring { env: String }
    signals { value: "x" }
